--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,24 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.18</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.4.3</version>
 	</parent>
-	<groupId>com.ITPatagonia</groupId>
-	<artifactId>javabackendchallenge</artifactId>
+
+	<groupId>com.companyapi</groupId>
+	<artifactId>backendchallenge</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>javabackendchallenge</name>
-	<description>Demo project for Spring Boot</description>
-	<url/>
+	<packaging>pom</packaging>
+
 	<properties>
-		<java.version>11</java.version>
+		<java.version>21</java.version>
 	</properties>
+	<modules>
+		<module>domain</module>
+		<module>infrastructure</module>
+		<module>application</module>
+		<module>contract</module>
+		<module>boot</module>
+	</modules>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
